<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/grey3"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartActivity">




        <TextView
            android:text="@string/select_valutes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:background="@color/grey1"
            android:padding="20dp"
            android:id="@+id/text"
            />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="49dp"
            android:background="@color/grey3"
            android:id="@+id/spinner1" />






    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_dates"
        android:textStyle="italic"
        android:background="@color/grey1"
        android:padding="20dp"
        android:id="@+id/selectDates" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/begin_date"
            android:id="@+id/beginDate" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"

            android:id="@+id/dateBegin" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/end_date"
            android:id="@+id/endDate" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"

            android:id="@+id/dateEnd" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:onClick="getCurses"
        android:textStyle="italic"
        android:background="@color/grey1"
        android:padding="20dp"
        android:layout_margin="20pt"
        android:id="@+id/button" />

</LinearLayout>
</ScrollView>